feat: adds a config provider for XML files
This commit contains a huge refactor. This has been necessary to accomodate the ability to have
different configuration providers. The provider added with this commit is the XML provider.

fix #67